--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,5 +1,5 @@
-\section{Class List}
+\subsection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{structgraphChild}{graph\-Child} \\*Struct that contain a graph link to an other graph }{\pageref{structgraphChild}}{}
-\item\contentsline{section}{\hyperlink{classGraphManager}{Graph\-Manager} \\*Class that create and manage some graph. This class can create paramethized undirected graph from a file or randomly }{\pageref{classGraphManager}}{}
+\item\contentsline{section}{{\bf graph\-Child} \\*Graph\-Child is a struct that contain a graph link to an other graph }{\pageref{structgraphChild}}{}
+\item\contentsline{section}{{\bf Graph\-Manager} \\*\doxyref{Graph\-Manager}{p.}{classGraphManager} is a class that create and manage some graph. This class can create paramethized undirected graph from a file or randomly }{\pageref{classGraphManager}}{}
 \end{DoxyCompactList}
