--- a/latex/dir_b5e0a4c2abe2f4cb1bbfa97b52316a11.tex
+++ b/latex/dir_b5e0a4c2abe2f4cb1bbfa97b52316a11.tex
@@ -1,6 +1,5 @@
-\hypertarget{dir_b5e0a4c2abe2f4cb1bbfa97b52316a11}{\section{graph\-Utilities Directory Reference}
+\subsection{graph\-Utilities Directory Reference}
 \label{dir_b5e0a4c2abe2f4cb1bbfa97b52316a11}\index{graph\-Utilities Directory Reference@{graph\-Utilities Directory Reference}}
-}
 Directory dependency graph for graph\-Utilities\-:\nopagebreak
 \begin{figure}[H]
 \begin{center}
@@ -8,10 +7,10 @@ Directory dependency graph for graph\-Utilities\-:\nopagebreak
 \includegraphics[width=154pt]{dir_b5e0a4c2abe2f4cb1bbfa97b52316a11_dep}
 \end{center}
 \end{figure}
-\subsection*{Files}
+\subsubsection*{Files}
 \begin{DoxyCompactItemize}
 \item 
-file {\bfseries graph\-Manager.\-cpp}
+file {\bf graph\-Manager.\-cpp}
 \item 
-file {\bfseries graph\-Manager.\-h}
+file {\bf graph\-Manager.\-h}
 \end{DoxyCompactItemize}
